<resources>
    <string name="app_name">ALC</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="email">Email: oparaben1@gmail.com</string>
    <string name="phone_number">Phone Number: 2348068149983</string>
    <string name="slack_username">Slack Username: Opara Benjamin</string>
    <string name="myName">Opara Benjamin</string>
    <string name="profile_picture">Profile picture</string>
</resources>
